src/objects/OrderApi__EPayment__c.object
<CustomObject>
    <description>ePayment api transaction logging.</description>
    <fields>
        <fullName>OrderApi__API_Amount__c</fullName>
        <description>**System Calculated** API Amount (String) Value of ABS(Amount) * 100.</description>
        <formula>TEXT(ABS(OrderApi__Amount__c) * 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>**System Calculated** API Amount (String) Value of ABS(Amount) * 100.</inlineHelpText>
        <label>API Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__API_Response__c</fullName>
        <description>Stores the API response received from the gateway.</description>
        <inlineHelpText>Stores the API response received from the gateway.</inlineHelpText>
        <label>API Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__AVS_Code__c</fullName>
        <description>**System Calculated** AVS (Address Verification Service) returned in the response of the api transaction.</description>
        <inlineHelpText>**System Calculated** AVS (Address Verification Service) returned in the response of the api transaction.</inlineHelpText>
        <label>AVS Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__AVS_Message__c</fullName>
        <description>**System Calculated** AVS (Address Verification Service) Message.</description>
        <inlineHelpText>**System Calculated** AVS (Address Verification Service) Message.</inlineHelpText>
        <label>AVS Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated** Link to the related account (if applicable).</description>
        <inlineHelpText>**System Calculated** Link to the related account (if applicable).</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Payment_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Amount__c</fullName>
        <description>**System Calculated** Sum of the &quot;Total&quot; field of related Payment Activity Lines.</description>
        <inlineHelpText>**System Calculated** Sum of the &quot;Total&quot; field of related Payment Activity Lines.</inlineHelpText>
        <label>Amount</label>
        <summarizedField>OrderApi__EPayment_Line__c.OrderApi__Total__c</summarizedField>
        <summaryForeignKey>OrderApi__EPayment_Line__c.OrderApi__EPayment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrderApi__Bank_Account_Holder_Type__c</fullName>
        <description>Bank account holder type for the echeck or direct debit payment method (when supported by your payment gateway).</description>
        <inlineHelpText>Bank account holder type for the echeck or direct debit payment method (when supported by your payment gateway).</inlineHelpText>
        <label>Bank Account Holder Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Bank_Account_Number__c</fullName>
        <description>The bank account number for echeck or direct debit payments (when supported by your payment gateway).</description>
        <inlineHelpText>The bank account number for echeck or direct debit payments (when supported by your payment gateway).</inlineHelpText>
        <label>Bank Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Bank_Account_Type__c</fullName>
        <description>The bank account type for echeck or direct debit payments (when supported by your payment gateway).</description>
        <inlineHelpText>The bank account type for echeck or direct debit payments (when supported by your payment gateway).</inlineHelpText>
        <label>Bank Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Bank_Name__c</fullName>
        <description>The bank name for echeck or direct debit payments (when supported by your payment gateway).</description>
        <inlineHelpText>The bank name for echeck or direct debit payments (when supported by your payment gateway).</inlineHelpText>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Bank_Routing_Number__c</fullName>
        <description>The bank account routing number for echeck or direct debit payments (when supported by your payment gateway).</description>
        <inlineHelpText>The bank account routing number for echeck or direct debit payments (when supported by your payment gateway).</inlineHelpText>
        <label>Bank Routing Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated** Link to related batch.</description>
        <inlineHelpText>**System Calculated** Link to related batch.</inlineHelpText>
        <label>Batch</label>
        <referenceTo>OrderApi__Batch__c</referenceTo>
        <relationshipName>Payment_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_City__c</fullName>
        <description>Billing City for the customer&apos;s Payment Method.</description>
        <inlineHelpText>Billing City for the customer&apos;s Payment Method.</inlineHelpText>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_Country__c</fullName>
        <description>Billing Country for the customer&apos;s Payment Method.</description>
        <inlineHelpText>Billing Country for the customer&apos;s Payment Method.</inlineHelpText>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_Postal_Code__c</fullName>
        <description>Billing Postal Code for the customer&apos;s Payment Method.</description>
        <inlineHelpText>Billing Postal Code for the customer&apos;s Payment Method.</inlineHelpText>
        <label>Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_State__c</fullName>
        <description>Billing State for the customer&apos;s Payment Method.</description>
        <inlineHelpText>Billing State for the customer&apos;s Payment Method.</inlineHelpText>
        <label>Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_Street__c</fullName>
        <description>Billing Street for the customer&apos;s Payment Method.</description>
        <inlineHelpText>Billing Street for the customer&apos;s Payment Method.</inlineHelpText>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Business_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated** Link to the related Business Group.</description>
        <inlineHelpText>**System Calculated** Link to the related Business Group.</inlineHelpText>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipName>Payment_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__CVV_Code__c</fullName>
        <description>**System Calculated** CVV (Card Verification Value) Code.</description>
        <inlineHelpText>**System Calculated** CVV (Card Verification Value) Code.</inlineHelpText>
        <label>CVV Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__CVV_Message__c</fullName>
        <description>**System Calculated** CVV (Card Verification Value) Message.</description>
        <inlineHelpText>**System Calculated** CVV (Card Verification Value) Message.</inlineHelpText>
        <label>CVV Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated** Cancelled (true/false) returned in the response body of the API Transaction.</description>
        <inlineHelpText>**System Calculated** Cancelled (true/false) returned in the response body of the API Transaction.</inlineHelpText>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Card_Number__c</fullName>
        <description>The masked credit card number associated with the payment method.</description>
        <inlineHelpText>The masked credit card number associated with the payment method.</inlineHelpText>
        <label>Card Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Card_Type__c</fullName>
        <description>**System Calculated** The credit card type (if applicable).</description>
        <inlineHelpText>**System Calculated** The credit card type (if applicable).</inlineHelpText>
        <label>Card Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated** Link to the related contact record if applicable.</description>
        <inlineHelpText>**System Calculated** Link to the related contact record if applicable.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Payment_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Create_Payment_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the payment activity (if charged successfully) will create a new Payment Schedule, copying all Payment Activity Lines over to the detail of the new Payment Schedule. Default unchecked.</description>
        <inlineHelpText>When checked, the payment activity (if charged successfully) will create a new Payment Schedule, copying all Payment Activity Lines over to the detail of the new Payment Schedule. Default unchecked.</inlineHelpText>
        <label>Create Payment Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Currency_Code__c</fullName>
        <defaultValue>&quot;USD&quot;</defaultValue>
        <description>The iso-code for the currency used for the API transaction. Default is &quot;USD&quot;</description>
        <inlineHelpText>The iso-code for the currency used for the API transaction. Default is &quot;USD&quot;</inlineHelpText>
        <label>Currency Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Date__c</fullName>
        <description>The date for the epayment.</description>
        <inlineHelpText>The date for the epayment.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Deposit_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated** Link to the deposit GL account.</description>
        <inlineHelpText>**System Calculated** Link to the deposit GL account.</inlineHelpText>
        <label>Deposit Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipName>Payment_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Description__c</fullName>
        <description>**System Calculated** The description sent to the payment processor.</description>
        <inlineHelpText>**System Calculated** The description sent to the payment processor.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__EPayment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the related EPayment which is authorized for payment.</description>
        <inlineHelpText>Link to the related EPayment which is authorized for payment.</inlineHelpText>
        <label>E-Payment (Source)</label>
        <referenceTo>OrderApi__EPayment__c</referenceTo>
        <relationshipLabel>EPayments</relationshipLabel>
        <relationshipName>EPayments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Eligible_for_Card_Updater__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the payment method is available for the Card on File Updater service where Fonteva will update any expired or changed cards in your ePayment vault so that any future transactions are processed uninterrupted.</description>
        <inlineHelpText>When checked, the payment method is available for the Card on File Updater service where Fonteva will update any expired or changed cards in your ePayment vault so that any future transactions are processed uninterrupted.</inlineHelpText>
        <label>Eligible for Card Updater</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Email__c</fullName>
        <description>**System Calculated** The email address of the customer used to transact with the api.</description>
        <inlineHelpText>**System Calculated** The email address of the customer used to transact with the api.</inlineHelpText>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Entity__c</fullName>
        <description>**System Calculated** Valid values are &quot;Account&quot; and &quot;Contact&quot;, the system uses the entity field to determine the primary customer on a given transaction.</description>
        <inlineHelpText>**System Calculated** Valid values are &quot;Account&quot; and &quot;Contact&quot;, the system uses the entity field to determine the primary customer on a given transaction.</inlineHelpText>
        <label>Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                    <default>true</default>
                    <label>Contact</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Error_Code__c</fullName>
        <description>The error code given by the payment gateway.</description>
        <inlineHelpText>The error code given by the payment gateway.</inlineHelpText>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Errors__c</fullName>
        <description>**System Calculated** List of errors returned in the response of the api transaction.</description>
        <inlineHelpText>**System Calculated** List of errors returned in the response of the api transaction.</inlineHelpText>
        <label>Errors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__First_Name__c</fullName>
        <description>**System Calculated** The first name of the customer used to transact with the api.</description>
        <inlineHelpText>**System Calculated** The first name of the customer used to transact with the api.</inlineHelpText>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__First_Six_Digits__c</fullName>
        <description>The first six (6) digits of the payment method (credit card or bank account number).</description>
        <inlineHelpText>The first six (6) digits of the payment method (credit card or bank account number).</inlineHelpText>
        <label>First Six Digits</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Full_Name__c</fullName>
        <description>**System Calculated** The full name of the customer.</description>
        <inlineHelpText>**System Calculated** The full name of the customer.</inlineHelpText>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Gateway_Token__c</fullName>
        <description>**System Calculated** The gateway token used for the API call.</description>
        <inlineHelpText>**System Calculated** The gateway token used for the API call.</inlineHelpText>
        <label>Gateway Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Gateway_Transaction_ID__c</fullName>
        <description>The transaction id for the epayment as stored by the connected payment gateway.</description>
        <inlineHelpText>The transaction id for the epayment as stored by the connected payment gateway.</inlineHelpText>
        <label>Gateway Transaction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Has_Errors__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated** Checked when the api transaction responds with a one or more error messages.</description>
        <inlineHelpText>**System Calculated** Checked when the api transaction responds with a one or more error messages.</inlineHelpText>
        <label>Has Errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__IP_Address__c</fullName>
        <description>**System Calculated** The IP (Internet Protocol) address send and returned in the api transaction response.</description>
        <inlineHelpText>**System Calculated** The IP (Internet Protocol) address send and returned in the api transaction response.</inlineHelpText>
        <label>IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated**</description>
        <inlineHelpText>**System Calculated**</inlineHelpText>
        <label>Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Voided__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the related EPayment is voided.</description>
        <inlineHelpText>When checked, the related EPayment is voided.</inlineHelpText>
        <label>Is Voided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Last_4_Digits__c</fullName>
        <description>**System Calculated** The last four digits of the payment method number (credit card or bank account).</description>
        <inlineHelpText>**System Calculated** The last four digits of the payment method number (credit card or bank account).</inlineHelpText>
        <label>Last 4 Digits</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Last_Four_Digits__c</fullName>
        <description>The last four (4) digits of the payment method (credit card or bank account number).</description>
        <inlineHelpText>The last four (4) digits of the payment method (credit card or bank account number).</inlineHelpText>
        <label>Last Four Digits</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Last_Name__c</fullName>
        <description>**System Calculated** The last name of the customer used to transact with the api.</description>
        <inlineHelpText>**System Calculated** The last name of the customer used to transact with the api.</inlineHelpText>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Merchant_Location_Descriptor__c</fullName>
        <description>**System Calculated** The merchant location descriptor returned in the e-payment api transaction response.</description>
        <inlineHelpText>**System Calculated** The merchant location descriptor returned in the e-payment api transaction response.</inlineHelpText>
        <label>Merchant Location Descriptor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Merchant_Name_Descriptor__c</fullName>
        <description>**System Calculated** The merchant name descriptor returned in the e-payment api transaction response.</description>
        <inlineHelpText>**System Calculated** The merchant name descriptor returned in the e-payment api transaction response.</inlineHelpText>
        <label>Merchant Name Descriptor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Message__c</fullName>
        <description>The message sent in the response for the e-payment api transaction.</description>
        <inlineHelpText>The message sent in the response for the e-payment api transaction.</inlineHelpText>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Month__c</fullName>
        <description>**System Calculated** The credit card expiration month (MM).</description>
        <inlineHelpText>**System Calculated** The credit card expiration month (MM).</inlineHelpText>
        <label>Exp Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Number__c</fullName>
        <description>**System Calculated** Masked (all but last four digits) version of the credit card or bank account number.</description>
        <inlineHelpText>**System Calculated** Masked (all but last four digits) version of the credit card or bank account number.</inlineHelpText>
        <label>Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Number_of_Installments__c</fullName>
        <description>**Required Conditionally** The number of invoices or scheduled payments to create for the payment schedule. Required to create a new payment schedule with Schedule Type of &quot;Termed Recurring&quot; or &quot;Installment&quot;.</description>
        <inlineHelpText>**Required Conditionally** The number of invoices or scheduled payments to create for the payment schedule. Required to create a new payment schedule with Schedule Type of &quot;Termed Recurring&quot; or &quot;Installment&quot;.</inlineHelpText>
        <label>Number of Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__On_Test_Gateway__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated** Checked when the api transaction was invoked using a test gateway token.</description>
        <inlineHelpText>**System Calculated** Checked when the api transaction was invoked using a test gateway token.</inlineHelpText>
        <label>On Test Gateway</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Order_ID__c</fullName>
        <description>The Fonteva Sales Order or Receipt number associated with the ePayment.</description>
        <inlineHelpText>The Fonteva Sales Order or Receipt number associated with the ePayment.</inlineHelpText>
        <label>Order ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Path__c</fullName>
        <description>**System Calculated** Populates with the current web page path of the user when executing a new payment activity transaction.</description>
        <inlineHelpText>**System Calculated** Populates with the current web page path of the user when executing a new payment activity transaction.</inlineHelpText>
        <label>Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Payment_Gateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated**  The related payment gateway.</description>
        <inlineHelpText>**System Calculated** The related payment gateway.</inlineHelpText>
        <label>Payment Gateway</label>
        <referenceTo>OrderApi__Payment_Gateway__c</referenceTo>
        <relationshipName>Payment_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Payment_Method_Token__c</fullName>
        <description>**System Calculated** The API token for the payment method used for the transaction.</description>
        <inlineHelpText>**System Calculated** The API token for the payment method used for the transaction.</inlineHelpText>
        <label>Payment Method Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Payment_Method_Type__c</fullName>
        <description>**System Calculated** The payment method type used for the api transaction.</description>
        <inlineHelpText>**System Calculated** The payment method type used for the api transaction.</inlineHelpText>
        <label>Payment Method Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Payment_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated** A link to the related payment method (if applicable).</description>
        <inlineHelpText>**System Calculated** A link to the related payment method (if applicable).</inlineHelpText>
        <label>Payment Method</label>
        <referenceTo>OrderApi__Payment_Method__c</referenceTo>
        <relationshipName>Payment_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Pending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated** Pending (true/false) returned in the response body of the API Transaction.</description>
        <inlineHelpText>**System Calculated** Pending (true/false) returned in the response body of the API Transaction.</inlineHelpText>
        <label>Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Phone__c</fullName>
        <description>**System Calculated** The phone number sent to the gateway (optional/additional customer data)</description>
        <inlineHelpText>**System Calculated** The phone number sent to the gateway (optional/additional customer data)</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OrderApi__Process_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the systems will attempt to process the related E-payment.</description>
        <inlineHelpText>When checked, the systems will attempt to process the related E-payment.</inlineHelpText>
        <label>Process Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Process_Void__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the system will attempt to void this EPayment.</description>
        <inlineHelpText>When checked, the system will attempt to void this EPayment.</inlineHelpText>
        <label>Process Void</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Receipt_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated** Checked when the E-Payment transaction is successfull and the system has created a new Receipt.</description>
        <inlineHelpText>**System Calculated** Checked when the E-Payment transaction is successfull and the system has created a new Receipt.</inlineHelpText>
        <label>Receipt Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Reference_Token__c</fullName>
        <description>**System Calculated** The reference token used (in lieu of a payment method) to invoke the transaction. (Reference Transactions are not supported by all gateways).</description>
        <inlineHelpText>**System Calculated** The reference token used (in lieu of a payment method) to invoke the transaction. (Reference Transactions are not supported by all gateways).</inlineHelpText>
        <label>Reference Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Refund_Receipt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Caluclated** Refund Reciept record for which the Epayment is processed</description>
        <inlineHelpText>**System Caluclated** Refund Reciept record for which the Epayment is processed</inlineHelpText>
        <label>Refund Receipt</label>
        <referenceTo>OrderApi__Receipt__c</referenceTo>
        <relationshipLabel>Refund ePayments</relationshipLabel>
        <relationshipName>Refund_EPayments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Retain_on_Success__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated** When checked, the system will store the credit card in a secure vault allowing you to charge the customer automatically using the same payment method at a later date.</description>
        <inlineHelpText>**System Calculated** When checked, the system will store the credit card in a secure vault allowing you to charge the customer automatically using the same payment method at a later date.</inlineHelpText>
        <label>Retain on Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Link to related Payment Schedule.</description>
        <inlineHelpText>**System Calculated/Override** Link to related Payment Schedule.</inlineHelpText>
        <label>Sales Order (Source)</label>
        <referenceTo>OrderApi__Sales_Order__c</referenceTo>
        <relationshipName>Payment_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Schedule_Frequency__c</fullName>
        <description>**Conditionally Required** &quot;Daily&quot;, &quot;Weekly&quot;, &quot;Monthly&quot;, &quot;Quarterly&quot;, &quot;Semi-Annually&quot;, or &quot;Annually&quot; required when creating new payment schedules from an E-Payment transaction.</description>
        <inlineHelpText>**Conditionally Required** &quot;Daily&quot;, &quot;Weekly&quot;, &quot;Monthly&quot;, &quot;Quarterly&quot;, &quot;Semi-Annually&quot;, or &quot;Annually&quot; required when creating new payment schedules from an E-Payment transaction.</inlineHelpText>
        <label>Schedule Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Schedule_Type__c</fullName>
        <description>**Conditionally Required** &quot;Installment&quot;, &quot;Termed Recurring&quot;, or &quot;Evergreen Recurring&quot; required when creating new payment schedules from an E-Payment transaction.</description>
        <inlineHelpText>**Conditionally Required** &quot;Installment&quot;, &quot;Termed Recurring&quot;, or &quot;Evergreen Recurring&quot; required when creating new payment schedules from an E-Payment transaction.</inlineHelpText>
        <label>Schedule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Evergreen Recurring</fullName>
                </value>
                <value>
                    <fullName>Installment</fullName>
                </value>
                <value>
                    <fullName>Termed Recurring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Scheduled_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Scheduled Payment record that generated the E-Payment

**Only populated when the E-Payment is generated from a Scheduled Payment record**</description>
        <inlineHelpText>Link to the Scheduled Payment record that generated the E-Payment

**Only populated when the E-Payment is generated from a Scheduled Payment record**</inlineHelpText>
        <label>Scheduled Payment</label>
        <referenceTo>OrderApi__Scheduled_Payment__c</referenceTo>
        <relationshipName>E_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Source_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated** Link to related source code.</description>
        <inlineHelpText>**System Calculated** Link to related source code.</inlineHelpText>
        <label>Source Code</label>
        <referenceTo>OrderApi__Source_Code__c</referenceTo>
        <relationshipName>Payment_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>